--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
               "hf/WizardLM/WizardCoder-Python-34B-V1.0",
               "hf/deepseek-ai/deepseek-coder-6.7b-base",
               "ollama/codellama:7b",
+              "vertex/mistral-codestral",
               "Custom"
             ],
             "default": "hf/bigcode/starcoder2-15b",
@@ -140,8 +141,14 @@
             "default": "<fim_suffix>",
             "description": "Suffix token"
           },
+          "llm.fillInTheMiddle.style": {
+            "type": "string",
+            "enum": ["markers", "prompt_suffix"],
+            "default": "markers",
+            "description": "FIM style: 'markers' = legacy prefix/middle/suffix-token approach; 'prompt_suffix' = new split (prefix + suffix) approach."
+          },
           "llm.requestBody": {
-            "type": "object",
+            "type": ["object", "null"],
             "default": {
               "parameters": {
                 "max_new_tokens": 60,
@@ -149,7 +156,7 @@
                 "top_p": 0.95
               }
             },
-            "description": "Whatever you set here will be sent as is as the HTTP POST request body to the chosen backend. Model and prompt will be added automatically."
+            "description": "Whatever you set here will be sent as is as the HTTP POST request body to the chosen backend. Model and prompt will be added automatically. Set to null to send an empty request body."
           },
           "llm.contextWindow": {
             "type": "integer",
